bad/assign_field_class_of_field_void.example_compiler_output
ERROR
[1mbad/assign_field_class_of_field_void.lat:13:16: [1;31merror: [0;1massigning to `Y` from incompatible type `void`[m
	(new D).c.fld = vfunc();
	              [1;32m^[m
